samples/_failures_safe/1760886297_281bbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2df9d2ec.c: In function ‘main’:
./samples/SAFE/__tmp_2df9d2ec.c:151:17: error: expected expression at end of input
  151 |                 b.cols =
      |                 ^
./samples/SAFE/__tmp_2df9d2ec.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2df9d2ec.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2df9d2ec.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2df9d2ec.c:151:17: error: expected declaration or statement at end of input
